@@ -1,9 +1,7 @@
 package com.codeborne.selenide.webdriver;
 
 import com.codeborne.selenide.*;
-import org.openqa.selenium.Capabilities;
-import org.openqa.selenium.Proxy;
-import org.openqa.selenium.WebDriver;
+import org.openqa.selenium.*;
 import org.openqa.selenium.chrome.ChromeDriver;
 import org.openqa.selenium.chrome.ChromeOptions;
 import org.openqa.selenium.firefox.FirefoxDriver;
@@ -30,6 +28,7 @@ public class WebDriverFactory {
   public WebDriver createWebDriver(Proxy proxy) {
     log.config("Configuration.browser=" + browser);
     log.config("Configuration.remote=" + remote);
+    log.config("Configuration.browserSize=" + browserSize);
     log.config("Configuration.startMaximized=" + startMaximized);
 
     WebDriver webdriver = remote != null ? createRemoteDriver(remote, browser, proxy) :
@@ -41,7 +40,7 @@ public class WebDriverFactory {
                             isOpera() ? createOperaDriver(proxy) :
                                 isSafari() ? createSafariDriver(proxy) :
                                     createInstanceOf(browser, proxy);
-    webdriver = maximize(webdriver);
+    webdriver = adjustBrowserSize(webdriver);
     if (!isHeadless()) {
       Capabilities capabilities = ((RemoteWebDriver) webdriver).getCapabilities();
       log.info("BrowserName=" + capabilities.getBrowserName() + " Version=" + capabilities.getVersion()
@@ -115,8 +114,15 @@ public class WebDriverFactory {
     return createInstanceOf("org.openqa.selenium.safari.SafariDriver", proxy);
   }
 
-  protected WebDriver maximize(WebDriver driver) {
-    if (startMaximized) {
+  protected WebDriver adjustBrowserSize(WebDriver driver) {
+    if (browserSize != null) {
+      log.info("Set browser size to " + browserSize);
+      String[] dimension = browserSize.split("x");
+      int width = Integer.parseInt(dimension[0]);
+      int height = Integer.parseInt(dimension[1]);
+      driver.manage().window().setSize(new org.openqa.selenium.Dimension(width, height));
+    }
+    else if (startMaximized) {
       try {
         if (isChrome()) {
           maximizeChromeBrowser(driver.manage().window());
